--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# =========================
+# User Defined Ignores
+# =========================
+
+sounds/*
+
 # Windows image file caches
 Thumbs.db
 ehthumbs.db
